--- a/css/bondi.css
+++ b/css/bondi.css
@@ -134,3 +134,75 @@ height: 200px;
     z-index: 1;
 }
 /* End Our-Work */
+/* Start stuff */
+.stuff .description{
+    width:70%;
+}
+/* end stuff */
+/* Start Team */
+.team{
+    background-color:var(--section-color);
+}
+.team h2{
+color:var(--yellow-color);
+}
+.team p{
+    width:70%;
+}
+.team .box h4{
+    background-color: var(--green-color);
+}
+
+/* End Team */
+/* Start Project */
+.project{
+    background-color:var(--dark-color);
+}
+/* End Project */
+/* Start subscribe */
+.subscribe{
+    background-color: var(--yellow-color);
+}
+.subscribe input[type='text']{
+    border:none;
+    border-bottom:1px solid white;
+}
+.subscribe input[type='text']:focus{
+    outline:none;
+}
+.subscribe input[type='text']::placeholder{
+    color:white;
+}
+.subscribe input[type='submit']{
+    background-color: var(--dark-color);
+    color:var(--yellow-color);
+}
+/* End subscribe */
+/* Start Footer */
+.footer{
+    background-color: var(--dark-color);
+}
+.footer .copyright > span{
+    color:var(--green-color);
+}
+.footer .copyright div span{
+    color:var(--yellow-color);
+}
+.footer .contact ul svg{
+    width:20px;
+    height:20px;
+}
+.footer .facebook{
+    background-color:#1877f2;
+}
+.footer .twitter{
+    background-color:#1da1f2;
+}
+.footer .linkedin{
+    background-color:#0077b5;
+}
+.footer .youtube{
+    background-color:#ff0000;
+}
+
+/* End Footer */
